--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           uses: 'azure/aci-deploy@v1'
           with:
             resource-group: PG-jonathan
-            dns-name-label: url-for-container
+            dns-name-label: niko-planning
             image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/nikoplanningpoker:${{ github.sha }}
             registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
             registry-username: ${{ secrets.REGISTRY_USERNAME }}
